force-app/main/default/objects/TrackIT__Item__c/TrackIT__Item__c.object-meta.xml
<CustomObject>
    <description>Stores all item records such as assets, files, equipment and samples in Facility Manager</description>
    <label>Item</label>
    <nameField>
        <label>Item Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>