force-app/main/default/objects/TrackIT__Item__c/fields/Alternate_Description__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Description__c</fullName>
    <label>Alternate Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>