force-app/main/default/objects/TrackIT__Item__c/fields/Assigned_to_Project__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned to Project</label>
    <referenceTo>Krow__Project__c</referenceTo>
    <relationshipLabel>Items</relationshipLabel>
    <relationshipName>Items</relationshipName>
    <type>Lookup</type>
</CustomField>