force-app/main/default/objects/TrackIT__Item__c/fields/Date_Fed_Inspection_Due__c.field-meta.xml
<CustomField>
    <fullName>Date_Fed_Inspection_Due__c</fullName>
    <label>Date Fed Inspection Due</label>
    <type>Date</type>
</CustomField>