force-app/main/default/objects/TrackIT__Item__c/fields/Date_NJ_Inspection_Due__c.field-meta.xml
<CustomField>
    <fullName>Date_NJ_Inspection_Due__c</fullName>
    <label>Date NJ Inspection Due</label>
    <type>Date</type>
</CustomField>