force-app/main/default/objects/TrackIT__Item__c/fields/Equipment_Item_Project__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Item_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equipment Item Project</label>
    <referenceTo>Krow__Project__c</referenceTo>
    <relationshipLabel>Items (Equipment Item Project)</relationshipLabel>
    <relationshipName>MasterItem</relationshipName>
    <type>Lookup</type>
</CustomField>