force-app/main/default/objects/TrackIT__Item__c/fields/Fed_Inspection_Required__c.field-meta.xml
<CustomField>
    <fullName>Fed_Inspection_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fed Inspection Required</label>
    <type>Checkbox</type>
</CustomField>