force-app/main/default/objects/TrackIT__Item__c/fields/Image_for_ListView__c.field-meta.xml
<CustomField>
    <fullName>Image_for_ListView__c</fullName>
    <label>Image URL for ListView</label>
    <length>255</length>
    <type>Text</type>
</CustomField>