force-app/main/default/objects/TrackIT__Item__c/fields/Insurance_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Effective_Date__c</fullName>
    <label>Insurance Effective Date</label>
    <type>Date</type>
</CustomField>