force-app/main/default/objects/TrackIT__Item__c/fields/Insurance_Expry_Date__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Expry_Date__c</fullName>
    <label>Insurance Expry Date</label>
    <type>Date</type>
</CustomField>