force-app/main/default/objects/TrackIT__Item__c/fields/Insurance_Policy__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Policy__c</fullName>
    <label>Insurance Policy #</label>
    <length>30</length>
    <type>Text</type>
</CustomField>