force-app/main/default/objects/TrackIT__Item__c/fields/ListView_Thumbnail__c.field-meta.xml
<CustomField>
    <fullName>ListView_Thumbnail__c</fullName>
    <formula>IF(Image_for_ListView__c=&apos;&apos;,&apos;&apos;,HYPERLINK(Image_for_ListView__c, IMAGE( Image_for_ListView__c, &apos;&apos;,100,100), &apos;_BLANK&apos;))</formula>
    <label>Thumbnail Image</label>
    <type>Text</type>
</CustomField>