force-app/main/default/objects/TrackIT__Item__c/fields/Manufacturer_Name__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_Name__c</fullName>
    <label>Manufacturer Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>