force-app/main/default/objects/TrackIT__Item__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>Model #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>