force-app/main/default/objects/TrackIT__Item__c/fields/NJ_Inspection_Required__c.field-meta.xml
<CustomField>
    <fullName>NJ_Inspection_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NJ Inspection Required</label>
    <type>Checkbox</type>
</CustomField>