force-app/main/default/objects/TrackIT__Item__c/fields/Power__c.field-meta.xml
<CustomField>
    <fullName>Power__c</fullName>
    <label>Power</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Electric</fullName>
            </value>
            <value>
                <fullName>Battery</fullName>
            </value>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>Diesel</fullName>
            </value>
            <value>
                <fullName>Pneumatic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>