force-app/main/default/objects/TrackIT__Item__c/fields/Registration_Expry_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_Expry_Date__c</fullName>
    <label>Registration Expry Date</label>
    <type>Date</type>
</CustomField>