force-app/main/default/objects/TrackIT__Item__c/fields/Temporary_Location__c.field-meta.xml
<CustomField>
    <fullName>Temporary_Location__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Temporary Location</label>
    <type>Checkbox</type>
</CustomField>