force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Add_12_Year_Inspection_Event_to_Calendar__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Add_12_Year_Inspection_Event_to_Calendar__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box to add calendar event for next 12 year inspection to calendar</description>
    <inlineHelpText>Check this box to add event to assigned inspector&apos;s calendar for next 12 year inspection.</inlineHelpText>
    <label>Add 12 Year Inspection Event to Calendar</label>
    <type>Checkbox</type>
</CustomField>