force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Add_Annual_Inspection_Event_to_Calendar__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Add_Annual_Inspection_Event_to_Calendar__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box to add calendar event for next annual inspection to calendar</description>
    <inlineHelpText>Check this box to add event to assigned inspector&apos;s calendar for next annual inspection.</inlineHelpText>
    <label>Add Annual Inspection Event to Calendar</label>
    <type>Checkbox</type>
</CustomField>