force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Add_inspection_event_to_calendar__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Add_inspection_event_to_calendar__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box to add calendar event for next inspection to calendar</description>
    <inlineHelpText>Check this box to add event to assigned inspector&apos;s calendar for next inspection for this equipment item.</inlineHelpText>
    <label>Add Inspection Event to Calendar</label>
    <type>Checkbox</type>
</CustomField>