force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Add_Inspection_Reminder_to_Calendar__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Add_Inspection_Reminder_to_Calendar__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box to add calendar event reminder for next inspection to calendar</description>
    <inlineHelpText>Check this box to add reminder to assigned inspector&apos;s calendar for next inspection event.</inlineHelpText>
    <label>Add Inspection Reminder to Calendar</label>
    <type>Checkbox</type>
</CustomField>