force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Add_maintenance_event_to_calendar__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Add_maintenance_event_to_calendar__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box to add calendar event for next &apos;Maintenance Due&apos; to calendar</description>
    <inlineHelpText>Check this box to add event to assigned technician&apos;s calendar for next maintenance due for this equipment item.</inlineHelpText>
    <label>Add Maintenance Event to Calendar</label>
    <type>Checkbox</type>
</CustomField>