force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Add_Maintenance_Reminder_to_Calendar__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Add_Maintenance_Reminder_to_Calendar__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box to add calendar event reminder for next  &apos;Maintenance Due&apos; to calendar</description>
    <inlineHelpText>Check this box to add reminder to assigned technician&apos;s calendar for next maintenance due event.</inlineHelpText>
    <label>Add Maintenance Reminder to Calendar</label>
    <type>Checkbox</type>
</CustomField>