force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Add_Monthly_Inspect_Reminder_to_Calendar__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Add_Monthly_Inspect_Reminder_to_Calendar__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box to add calendar event for next inspection to calendar</description>
    <inlineHelpText>Check this box to add event reminder to assigned inspector&apos;s calendar for next inspection for this fire extinguisher.</inlineHelpText>
    <label>Add Monthly Inspect Reminder to Calendar</label>
    <type>Checkbox</type>
</CustomField>