force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Archive_Box_Number__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Archive_Box_Number__c</fullName>
    <description>Archive box number for items stored in offsite location</description>
    <inlineHelpText>Archive box number for items stored in offsite location</inlineHelpText>
    <label>Archive Box Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>