force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Archive_Date__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Archive_Date__c</fullName>
    <label>Archive Date</label>
    <type>Date</type>
</CustomField>