force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Archive_Location__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Archive_Location__c</fullName>
    <description>Location ID of offsite storage</description>
    <inlineHelpText>Location ID where item is stored at offsite facility</inlineHelpText>
    <label>Archive Location</label>
    <length>35</length>
    <type>Text</type>
</CustomField>