force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Archive_Location_Address__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Archive_Location_Address__c</fullName>
    <label>Archive Location Address</label>
    <type>TextArea</type>
</CustomField>