force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Assigned_Inspector_5_Year__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Assigned_Inspector_5_Year__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Inspector (5 Year)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Items4</relationshipName>
    <type>Lookup</type>
</CustomField>