force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Assigned_Inspector_Annual__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Assigned_Inspector_Annual__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Inspector (Annual)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Items3</relationshipName>
    <type>Lookup</type>
</CustomField>