force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Assigned_Technician__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Assigned_Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Technician</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Items1</relationshipName>
    <type>Lookup</type>
</CustomField>