force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Assigned_To__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Select an assignee to change the item&apos;s state. Clear out the field when an item is returned.</inlineHelpText>
    <label>Assigned To</label>
    <referenceTo>TrackIT__Assignee__c</referenceTo>
    <relationshipLabel>Items</relationshipLabel>
    <relationshipName>Items</relationshipName>
    <type>Lookup</type>
</CustomField>