force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Assignee_Dept__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Assignee_Dept__c</fullName>
    <inlineHelpText>Department updated from the assignee object when an item is assigned out.</inlineHelpText>
    <label>Assignee Dept</label>
    <length>50</length>
    <type>Text</type>
</CustomField>