force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Assignee_Email__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Assignee_Email__c</fullName>
    <description>Assignee Email updated from Assignee object.</description>
    <inlineHelpText>Email updated from assignee object when an item is assigned out.</inlineHelpText>
    <label>Assignee Email</label>
    <type>Email</type>
</CustomField>