force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Assignee_Phone__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Assignee_Phone__c</fullName>
    <description>Assignee Phone updated from Assignee object.</description>
    <inlineHelpText>Phone updated from the assignee object when an item is assigned out.</inlineHelpText>
    <label>Assignee Phone</label>
    <type>Phone</type>
</CustomField>