force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Category__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Category__c</fullName>
    <description>Category Picklist Field</description>
    <inlineHelpText>Category name. Enter additional values in the picklist settings for the field in setup.</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TrackIT__Category</valueSetName>
    </valueSet>
</CustomField>