force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Cell_Number__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Cell_Number__c</fullName>
    <label>Cell Number</label>
    <type>Phone</type>
</CustomField>