force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Claim_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Claim_Close_Date__c</fullName>
    <description>Close date for claim section in Facility Manager file record type</description>
    <inlineHelpText>Claim close date. Field is optional.</inlineHelpText>
    <label>Claim Close Date</label>
    <type>Date</type>
</CustomField>