force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Claim_Number__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Claim_Number__c</fullName>
    <label>Claim Number</label>
    <length>35</length>
    <type>Text</type>
</CustomField>