force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Claim_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Claim_Open_Date__c</fullName>
    <description>Open date for claim section in Facility Manager file record type</description>
    <inlineHelpText>Claim open date. Field is optional.</inlineHelpText>
    <label>Claim Open Date</label>
    <type>Date</type>
</CustomField>