force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Claim_Status__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Claim_Status__c</fullName>
    <description>Claim Status in Files</description>
    <inlineHelpText>Claim status name. Enter additional values in the picklist settings for the field in setup.</inlineHelpText>
    <label>Claim Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TrackIT__Claim_Status</valueSetName>
    </valueSet>
</CustomField>