force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Class_Rating__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Class_Rating__c</fullName>
    <label>Class Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TrackIT__Class_Rating</valueSetName>
    </valueSet>
</CustomField>