force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Client_Address__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Client_Address__c</fullName>
    <description>Client address for claim section in Facility Manager file record type</description>
    <label>Client Address</label>
    <type>TextArea</type>
</CustomField>