force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Client_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Client_Contact_Name__c</fullName>
    <inlineHelpText>Contact name information at client location</inlineHelpText>
    <label>Client Contact Name</label>
    <length>35</length>
    <type>Text</type>
</CustomField>