force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Client_ID__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Client_ID__c</fullName>
    <label>Client ID</label>
    <length>35</length>
    <type>Text</type>
</CustomField>