force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Client_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Client_Phone_Number__c</fullName>
    <label>Client Phone Number</label>
    <type>Phone</type>
</CustomField>