force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Contract_Addenda__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Contract_Addenda__c</fullName>
    <inlineHelpText>Enter the number of contract addenda. Use the child items section to add more information about each addendum .</inlineHelpText>
    <label>Contract Addenda</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>