force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Contract_Amount__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Contract_Amount__c</fullName>
    <label>Contract Amount</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>