force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Contract_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Contract_Effective_Date__c</fullName>
    <label>Contract Effective Date</label>
    <type>Date</type>
</CustomField>