force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Contract_ID__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Contract_ID__c</fullName>
    <label>Contract ID</label>
    <length>35</length>
    <type>Text</type>
</CustomField>