force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Contract_Information__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Contract_Information__c</fullName>
    <label>Contract Information</label>
    <type>TextArea</type>
</CustomField>