force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__CPU__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__CPU__c</fullName>
    <label>CPU</label>
    <length>30</length>
    <type>Text</type>
</CustomField>