force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Current_State__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Current_State__c</fullName>
    <description>Displays the current state of the item, either in it&apos;s current location or assigned out of the location.</description>
    <inlineHelpText>Displays the current state of the item, either in it&apos;s current location or assigned out of the location.</inlineHelpText>
    <label>Current State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In</fullName>
                <color>#0B6FCE</color>
                <default>true</default>
                <label>In</label>
            </value>
            <value>
                <fullName>Out</fullName>
                <color>#78C953</color>
                <label>Out</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>