force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Department__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Department__c</fullName>
    <description>Department Picklist Field</description>
    <inlineHelpText>Department name. Enter additional values in the picklist settings for the field in setup.</inlineHelpText>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TrackIT__Department</valueSetName>
    </valueSet>
</CustomField>