force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Depreciation_Per_Year__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Depreciation_Per_Year__c</fullName>
    <inlineHelpText>Simple depreciation amount per year</inlineHelpText>
    <label>Depreciation Per Year</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>