force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Description__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Description__c</fullName>
    <label>Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>