force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Destruction_Date__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Destruction_Date__c</fullName>
    <label>Destruction Date</label>
    <type>Date</type>
</CustomField>