force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Duration_Out_Assignee__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Duration_Out_Assignee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Duration Out Assignee</label>
    <referenceTo>TrackIT__Assignee__c</referenceTo>
    <relationshipLabel>Items (Duration Out Assignee)</relationshipLabel>
    <relationshipName>Items1</relationshipName>
    <type>Lookup</type>
</CustomField>