force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Duration_Out_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Duration_Out_Date_Time__c</fullName>
    <label>Duration Out Date Time</label>
    <type>DateTime</type>
</CustomField>