force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__EAN_UPC_Number__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__EAN_UPC_Number__c</fullName>
    <label>EAN/UPC Number</label>
    <length>13</length>
    <type>Text</type>
</CustomField>