force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__End_Life_Date__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__End_Life_Date__c</fullName>
    <inlineHelpText>Calculated useful end of life date</inlineHelpText>
    <label>End Life Date</label>
    <type>Date</type>
</CustomField>