force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Equipment_Image__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Equipment_Image__c</fullName>
    <label>Equipment Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>