force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Equipment_Status__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Equipment_Status__c</fullName>
    <label>Equipment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TrackIT__Equipment_Status</valueSetName>
    </valueSet>
</CustomField>