force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Equipment_Type__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Equipment_Type__c</fullName>
    <label>Equipment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TrackIT__Equipment_Type</valueSetName>
    </valueSet>
</CustomField>