force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Expiration_Date__c</fullName>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>