force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Extinguisher_Inspection_Date_Types__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Extinguisher_Inspection_Date_Types__c</fullName>
    <description>Used in flow to select the appropriate inspection date types:
Mass Update Assigned Inspector Fire Extinquisher</description>
    <label>Extinguisher Inspection Date Types</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inspection - Fire Extinguisher Monthly</fullName>
            </value>
            <value>
                <fullName>Inspection - Fire Extinguisher Annual</fullName>
            </value>
            <value>
                <fullName>Inspection - Fire Extinguisher 5 Year</fullName>
            </value>
            <value>
                <fullName>Inspection - Fire Extinguisher 6 Year</fullName>
            </value>
            <value>
                <fullName>Inspection - Fire Extinguisher 10 Year</fullName>
            </value>
            <value>
                <fullName>Inspection - Fire Extinguisher 12 Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>