force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Extinguisher_Type__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Extinguisher_Type__c</fullName>
    <label>Extinguisher Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TrackIT__Extinguisher_Type</valueSetName>
    </valueSet>
</CustomField>