force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__File_Archived__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__File_Archived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field checked true when any archive information is entered.</description>
    <label>File Archived</label>
    <type>Checkbox</type>
</CustomField>